examples/errors/method_wrong_args.vut
let nums = [1, 2]
nums.push()
